--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/feature-box";
 @import "components/forms";
 @import "components/popup";
+@import "components/shop";
 @import "components/story";
 
 @import "layout/footer";
