--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ html {
 }
 @media (max-width: 37.5em) {
   html {
-    font-size: 30%;
+    font-size: 40%;
   }
 }
 @media (min-width: 112.5em) {
@@ -75,7 +75,7 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  padding: 3rem;
+  padding: 0;
 }
 @media (max-width: 56.25em) {
   body {
@@ -126,6 +126,7 @@ body {
   color: #2b2d42;
   letter-spacing: 2px;
   transition: all 0.3s;
+  padding-top: 5rem;
 }
 @media (max-width: 56.25em) {
   .heading-secondary {
@@ -479,7 +480,7 @@ body {
   }
 }
 .composition__photo--p2 {
-  right: -5rem;
+  right: 0;
   top: 2rem;
 }
 @media (max-width: 56.25em) {
@@ -906,14 +907,7 @@ body {
     url(/resources/images/sneakers.jpeg);
   background-size: cover;
   background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 650px, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 650px, 0 100%);
-}
-@media (max-width: 37.5em) {
-  .header {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 90%);
-    clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 90%);
-  }
+  margin-bottom: 10rem;
 }
 .header__logo {
   position: absolute;
@@ -1031,7 +1025,7 @@ body {
     transparent 50%,
     #fff 50%
   );
-  background-size: 220%;
+  background-size: 225%;
   transition: all 0.5s;
 }
 
@@ -1043,7 +1037,7 @@ body {
 }
 
 .navigation__checkbox:checked ~ .navigation__background {
-  transform: scale(80);
+  transform: scale(55);
 }
 
 .navigation__checkbox:checked ~ .navigation__nav {
@@ -1103,12 +1097,14 @@ body {
 
 .section-about {
   background-color: #edf2f4;
-  padding: 25rem 0;
+  padding: 10rem;
   margin-top: -20vh;
+  margin-bottom: 10rem;
+  overflow: hidden;
 }
 @media (max-width: 56.25em) {
   .section-about {
-    padding: 20rem 0;
+    padding: 15rem 0;
   }
 }
 
@@ -1135,18 +1131,17 @@ body {
 
 .section-kicks {
   background-color: #edf2f4;
-  padding: 25rem 0 15rem 0;
-  margin-top: -10rem;
+  padding: 1rem 0 15rem 0;
 }
 @media (max-width: 56.25em) {
   .section-kicks {
-    padding: 20rem 0 10rem 0;
+    padding: 1rem 0 10rem 0;
   }
 }
 
 .section-stories {
   position: relative;
-  padding: 15rem 0;
+  padding: 5rem;
 }
 @media (max-width: 56.25em) {
   .section-stories {
