--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,7 +19,7 @@ html {
 
   @include respond(phone) {
     //width < 600
-    font-size: 30%; //1 rem = 4.8px, 4.8/16 = 50
+    font-size: 40%; //1 rem = 4.8px, 4.8/16 = 50
   }
 
   @include respond(desktop) {
@@ -30,7 +30,7 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  padding: 3rem;
+  padding: 0;
 
   @include respond(tablet-portrait) {
     padding: 0;
