--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.u-margin-top-medium {
+  margin-top: 3.5rem !important;
+}
+
 .u-margin-top-large {
   margin-top: 8rem !important;
 }
