--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,13 +9,8 @@
     url(/resources/images/sneakers.jpeg);
   background-size: cover;
   background-position: center;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 650px, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 650px, 0 100%);
+  margin-bottom: 10rem;
 
-  @include respond(phone) {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 90%);
-    clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 90%);
-  }
   &__logo {
     position: absolute;
     top: 3rem;
