--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,10 +1,12 @@
 .section-about {
   background-color: $color-natural;
-  padding: 25rem 0;
+  padding: 10rem;
   margin-top: -20vh;
+  margin-bottom: 10rem;
+  overflow: hidden;
 
   @include respond(tablet-portrait) {
-    padding: 20rem 0;
+    padding: 15rem 0;
   }
 }
 
@@ -31,8 +33,7 @@
 
 .section-kicks {
   background-color: $color-natural;
-  padding: 25rem 0 15rem 0;
-  margin-top: -10rem;
+  padding: 1rem 0 15rem 0;
 
   @include respond(tablet-portrait) {
     padding: 20rem 0 10rem 0;
